--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 	</script>
 	<style type="text/css">
 		.panel1{
-			width: 100px;
+			width: 200px;
 			height: 100px;
-			/*font-size: 20px;*/
-			/*line-height: 20px;*/
 		}
 		.text2{
 			font-size: 20px;
@@ -34,20 +32,24 @@
 	<div class="panel1">
 		<span class="text1">
 			สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก
+			สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก
 		</span>
 	</div>
 	<div class="panel1">
 		<span class="text2">
+			สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก
 			สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก
 		</span>
 	</div>
 	<div class="panel1">
 		<span class="text3">
 			สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก
+			สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก
 		</span>
 	</div>
 	<div class="panel1">
 		<span class="text4">
+			สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก
 			สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก สวัสดีชาวโลก
 		</span>
 	</div>
